fixed spacing between users

--- a/client/src/components/UserTable/UserRow/UserRow.css
+++ b/client/src/components/UserTable/UserRow/UserRow.css
@@ -1,5 +1,4 @@
 .dot {
-    width: 55px;
-    padding-top: 8px;
-
+    width: 60px;
+    height: 12px;
 }
